ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-na-nuvem-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: devops-na-nuvem-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0165fa912628a2dbb,subnet-0bf733be98323ec04
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
